fixing whitespace

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,9 @@ body {
 	background-size: cover;
 	background-attachment: fixed;
 	background-position: center;
+	height: 100%;
+	width: 100%;
+	overflow: auto;
 }
 
 html {
